--- a/bumba/index.html
+++ b/bumba/index.html
@@ -5,8 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bumba Africa</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- == Icons == -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        crossorigin="anonymous" />
+
+    <style>
+        @font-face {
+            font-family: Gotham-Medium;
+            src: url(css/Gotham\ Font/GothamMedium.ttf);
+        }
+        @font-face {
+            font-family: Gotham-Book;
+            src: url(css/Gotham\ Font/GothamBook.ttf);
+        }
+        @font-face {
+            font-family: GTWalsheimPro-Regular;
+            src: url(fonts/GTWalsheimPro-Regular.ttf);
+        }
+        @font-face {
+            font-family: GTWalsheimPro-Bold;
+            src: url(fonts/GTWalsheimPro-Bold.ttf);
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <section class="banner">
+            <nav>
+                <div class="left">
+                    <div class="logo">
+                        <svg width="244" height="78" viewBox="0 0 244 78" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_68_8395)">
+                            <path d="M66.6618 20.7929L27.0507 20.6398L33.8017 14.2835L38.5964 9.75751L44.2931 4.39289C45.752 3.01512 48.0599 4.56594 47.3569 6.44289L46.0306 9.97049C45.626 11.0487 46.2627 12.2335 47.3768 12.4931L67.0928 17.0523C69.2879 17.5582 68.9166 20.8062 66.6618 20.7996" fill="#F7941E"/>
+                            <path d="M66.8276 56.9208L47.1514 22.4169L56.0113 25.1125L62.3181 27.0161L69.7986 29.2857C71.7152 29.8648 71.5361 32.6469 69.5599 32.9731L65.8528 33.5854C64.7254 33.7718 64.0158 34.9166 64.354 36.0148L70.2827 55.4299C70.9459 57.5931 67.955 58.891 66.8342 56.9275" fill="#F7941E"/>
+                            <path d="M35.7382 75.1313L55.6731 40.7804L57.782 49.8257L59.294 56.2553L61.078 63.8895C61.5355 65.8464 59.042 67.0777 57.7754 65.5269L55.3946 62.6116C54.6717 61.7264 53.3255 61.6798 52.5496 62.5184L38.7557 77.381C37.2171 79.0383 34.6042 77.0881 35.7382 75.1313Z" fill="#F7941E"/>
+                            <path d="M4.483 57.2137L44.0941 57.3668L37.3431 63.7231L32.5483 68.2491L26.8517 73.6137C25.3927 74.9848 23.0849 73.4407 23.7879 71.5571L25.1142 68.0295C25.5187 66.9512 24.8821 65.7665 23.768 65.5136L4.05194 60.9543C1.85685 60.4484 2.22822 57.2004 4.483 57.207" fill="#F7941E"/>
+                            <path d="M4.31062 21.0858L23.9869 55.5898L15.1269 52.9008L8.82018 50.9972L1.33962 48.7276C-0.576936 48.1485 -0.39788 45.3664 1.57837 45.0402L5.28548 44.4279C6.41287 44.2415 7.12246 43.0967 6.78425 41.9985L0.862143 22.5834C0.198973 20.4202 3.18987 19.1223 4.31062 21.0858Z" fill="#F7941E"/>
+                            <path d="M35.4 2.87534L15.4651 37.2262L13.3562 28.1809L11.8442 21.7514L10.0603 14.1171C9.6027 12.1603 12.0962 10.9289 13.3629 12.4797L15.7436 15.395C16.4665 16.2802 17.8127 16.3268 18.5886 15.4882L32.3892 0.625665C33.9278 -1.03164 36.5406 0.918523 35.4066 2.87534" fill="#F7941E"/>
+                            <path d="M99.3959 19.9808C109.111 19.9808 112.832 23.9211 112.832 32.4273C112.832 34.1911 112.314 37.6122 110.199 39.9484C112.314 40.9335 113.866 43.5293 113.866 46.7374C113.866 53.1669 111.021 56.2752 101.312 56.2752H88.553C87.5715 56.2752 87.0012 55.7028 87.0012 54.7178V21.5849C87.0012 20.5466 87.5185 20.0274 88.553 19.9808H99.4025H99.3959ZM100.636 48.9138C103.116 48.9138 104.356 48.6543 104.356 46.2182C104.356 43.7822 103.222 43.4161 100.742 43.4161H97.3798C96.3983 43.4161 95.828 43.9353 95.828 44.9736V47.3564C95.828 48.3947 96.3983 48.9138 97.3798 48.9138H100.636ZM100.225 35.9482C102.705 35.9482 103.945 35.6354 103.945 32.4206C103.945 29.2059 102.705 28.893 100.225 28.893H97.4329C96.4514 28.893 95.8811 29.4122 95.8811 30.4505V34.3908C95.8811 35.4291 96.4514 35.9482 97.4329 35.9482H100.225Z" fill="#231F20"/>
+                            <path d="M124.298 19.9809C125.332 19.9809 125.85 20.5001 125.85 21.5384V41.8654C125.85 45.8589 126.108 48.2949 129.935 48.2949C133.761 48.2949 134.013 45.8589 134.013 41.8654V21.5384C134.013 20.5001 134.584 19.9809 135.565 19.9809H141.355C142.389 19.9809 142.906 20.5001 142.906 21.5384V44.6142C142.906 48.0353 142.184 57.2138 129.935 57.2138C117.686 57.2138 116.97 48.0353 116.97 44.6142V21.5317C116.97 20.4934 117.54 19.9742 118.522 19.9742H124.311L124.298 19.9809Z" fill="#231F20"/>
+                            <path d="M159.996 19.9809C160.925 19.9809 161.442 20.5001 161.648 21.3786L165.315 36.4675C165.421 36.9866 165.832 36.9866 165.932 36.4675L169.599 21.3786C169.805 20.4934 170.322 19.9809 171.25 19.9809H181.947C182.982 19.9809 183.499 20.5001 183.499 21.5384V54.7245C183.499 55.7095 182.982 56.2819 181.947 56.2819H176.158C175.176 56.2819 174.606 55.7095 174.606 54.7245V34.2976C174.606 33.9316 174.142 33.885 174.036 34.2444L169.022 54.9375C168.816 55.8227 168.246 56.2819 167.318 56.2819H163.909C162.981 56.2819 162.41 55.816 162.205 54.9375L157.191 34.2444C157.092 33.8783 156.621 33.9316 156.621 34.2976V54.7245C156.621 55.7095 156.103 56.2819 155.069 56.2819H149.279C148.245 56.2819 147.728 55.7095 147.728 54.7245V21.5317C147.728 20.4934 148.245 19.9742 149.279 19.9742H159.976L159.996 19.9809Z" fill="#231F20"/>
+                            <path d="M201.066 19.9808C210.782 19.9808 214.502 23.9211 214.502 32.4273C214.502 34.1911 213.985 37.6122 211.869 39.9484C213.985 40.9335 215.537 43.5293 215.537 46.7374C215.537 53.1669 212.692 56.2752 202.983 56.2752H190.224C189.242 56.2752 188.672 55.7028 188.672 54.7178V21.5849C188.672 20.5466 189.189 20.0274 190.224 19.9808H201.073H201.066ZM202.307 48.9138C204.787 48.9138 206.027 48.6543 206.027 46.2182C206.027 43.7822 204.893 43.4161 202.413 43.4161H199.05C198.069 43.4161 197.499 43.9353 197.499 44.9736V47.3564C197.499 48.3947 198.069 48.9138 199.05 48.9138H202.307ZM201.895 35.9482C204.376 35.9482 205.616 35.6354 205.616 32.4206C205.616 29.2059 204.376 28.893 201.895 28.893H199.103C198.122 28.893 197.552 29.4122 197.552 30.4505V34.3908C197.552 35.4291 198.122 35.9482 199.103 35.9482H201.895Z" fill="#231F20"/>
+                            <path d="M244 54.5114C244 55.6496 243.483 56.2752 242.448 56.2752H236.659C235.677 56.2752 235.107 55.7561 235.107 54.7178V50.2051C235.107 49.1668 234.59 48.6476 233.555 48.6476H229.112C228.13 48.6476 227.56 49.1668 227.56 50.2051V54.7178C227.56 55.7561 227.043 56.2752 226.008 56.2752H220.219C219.237 56.2752 218.667 55.6562 218.667 54.5114V32.5271C218.667 25.9911 219.701 19.0424 231.327 19.0424C242.952 19.0424 243.987 25.9911 243.987 32.5271V54.5114H244ZM235.114 32.5271C235.114 30.0378 234.749 28.7932 231.34 28.7932C227.931 28.7932 227.567 30.0378 227.567 32.5271V38.1779C227.567 39.163 228.137 39.7354 229.118 39.7354H233.562C234.596 39.6822 235.114 39.163 235.114 38.1247V32.5271Z" fill="#231F20"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_68_8395">
+                            <rect width="244" height="78" fill="white"/>
+                            </clipPath>
+                            </defs>
+                            </svg>                    
+                    </div>
+                    <div class="menu">
+                        <button><i class="fa-solid fa-bars"></i></button>
+                    </div>
+                </div>
+                <div class="right">
+                    <a href="#">Contact US</a>
+                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
+            </nav>
+            <div class="banner-image">
+                <img src="css/img/eye 1.png" alt="Eye, Bumba Africa Eye">
+            </div>
+            <div class="banner-text">
+                <div class="container banner-text-container">
+                    <h1>BRING YOUR <br> VISION TO LIFE.</h1>
+                    <p>Our team of disruptive and creative individuals will come  up with the best solutions for your brand. 
+                        <strong>Working with us will prove to be useful as it will help attract new prospects</strong>
+                    </p>
+                    <button>Get Started</button>
+                </div>
+            </div>
+        </section> 
+        <section class="projects">
+            <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%">
+            <div class="projects-container container">
+                <div class="left">
+                    <h2>OUR <br> PROJECTS</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
+                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
+                    <button>See More</button>
+                </div>
+                <div class="right">
+                    <img src="css/img/Ice cream smoke.png" alt="Smoke ice scream">
+                </div>
+            </div>
+        </section>         
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
