--- a/bumba/index.html
+++ b/bumba/index.html
@@ -34,6 +34,18 @@
 <body>
     <main>
         <section class="banner">
+            <div class="menu-links">
+                <div class="image"></div>
+                <div class="links">
+                    <div class="menu-links">
+                        <a href="#">ABOUT US</a>
+                        <a href="#">SERVICES</a>
+                        <a href="#">PORTFOLIO</a>
+                        <a href="#">BLOG</a>
+                        <button></button>
+                    </div>
+                </div>
+            </div>
             <nav>
                 <div class="left">
                     <div class="logo">
@@ -109,6 +121,39 @@
             </div>
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
         </section>    
+        <section class="team">
+            <div class="team-container container">
+                <div class="team-head">
+                    <h1>Our Team</h1>
+                </div>
+                <div class="team-members">
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member Two.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Head of Strategy & Operations</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member Three.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Senior Client Success Director</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="meet">
+                    <button>Meet Team</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container footer-container">
