--- a/bumba/index.html
+++ b/bumba/index.html
@@ -21,28 +21,22 @@
             font-family: Gotham-Book;
             src: url(css/Gotham\ Font/GothamBook.ttf);
         }
-        @font-face {
-            font-family: GTWalsheimPro-Regular;
-            src: url(fonts/GTWalsheimPro-Regular.ttf);
-        }
-        @font-face {
-            font-family: GTWalsheimPro-Bold;
-            src: url(fonts/GTWalsheimPro-Bold.ttf);
-        }
     </style>
 </head>
 <body>
     <main>
         <section class="banner">
             <div class="menu-links">
-                <div class="image"></div>
+                <div class="image">
+                    <img src="css/img/Mask group.png" alt="">
+                </div>
                 <div class="links">
                     <div class="menu-links">
                         <a href="#">ABOUT US</a>
                         <a href="#">SERVICES</a>
                         <a href="#">PORTFOLIO</a>
                         <a href="#">BLOG</a>
-                        <button></button>
+                        <button>x</button>
                     </div>
                 </div>
             </div>
