--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -99,6 +99,108 @@
             </div>
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
         </section>   
+        <section class="team">
+            <div class="team-container container">
+                <div class="team-head">
+                    <h1>LEADERSHIP</h1>
+                </div>
+                <div class="team-members">
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team">
+            <div class="team-container container">
+                <div class="team-head">
+                    <h1>CREATIVE</h1>
+                </div>
+                <div class="team-members">
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team">
+            <div class="team-container container">
+                <div class="team-head">
+                    <h1>CLIENT SERVICE OPERATIONS</h1>
+                </div>
+                <div class="team-members">
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Member One.png" alt="">
+                        <div class="member-info">
+                            <h4>Lorem Ipsum</h4>
+                            <p>Executive Creative Director</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Faucibus congue et leo gravida nullam ac at imperdiet. Viverra consequat auctor viverra aenean tempor pharetra ultrices. Ornare et nunc lectus quis vulputate donec nunc in elementum. Adipiscing et aenean ultricies.</p>
+                            <a href="#" target="_blank">Linked in</a>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <img src="css/img/Vector (Stroke).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container footer-container">
