--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <main>
-        <section class="banner">
+        <section class="banner about">
             <div class="menu-links" id="MenuOverlay">
                 <div class="menu-hold">
                     <div class="image">
@@ -84,9 +84,9 @@
                 </div>
             </div>
         </section>  
-        <section class="projects">
+        <section class="branding">
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%">
-            <div class="projects-container container">
+            <div class="branding-container container">
                 <div class="left">
                     <h1>BRANDING <br> BUSINESS <br> <strong>NOT</strong> AS <br> USUAL</h1>
                 </div>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="team-members">
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person one.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person two.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person three.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="team-members">
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person four.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person five.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person six.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="team-members">
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person seven.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="member">
-                        <img src="css/img/Member One.png" alt="">
+                        <img src="css/img/person eight.png" alt="">
                         <div class="member-info">
                             <h4>Lorem Ipsum</h4>
                             <p>Executive Creative Director</p>
