--- a/bumba/aboutus.html
+++ b/bumba/aboutus.html
@@ -33,9 +33,9 @@
                     <div class="links">
                         <div class="menu-link">
                             <a href="aboutus.html">ABOUT US</a>
-                            <a href="services">SERVICES</a>
-                            <a href="portfolio">PORTFOLIO</a>
-                            <a href="blog">BLOG</a>
+                            <a href="services.html">SERVICES</a>
+                            <a href="portfolio.html">PORTFOLIO</a>
+                            <a href="blog.html">BLOG</a>
                             <button class="closebtn" title="Close Menu" onclick="closeContact()"><i style="pointer-events: none;" class="fas fa-times"></i></button>
                         </div>
                     </div>
