--- a/bumba/services.html
+++ b/bumba/services.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <main>
-        <section class="banner">
+        <section class="banner about">
             <div class="menu-links" id="MenuOverlay">
                 <div class="menu-hold">
                     <div class="image">
@@ -70,86 +70,92 @@
                     </div>
                 </div>
                 <div class="right">
-                    <a href="#">Contact US</a>
+                    <a href="#">SERVICES</a>
                     <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </nav>
             <div class="banner-image">
-                <img src="css/img/eye 1.png" alt="Eye">
+                <img src="css/img/screen.png" alt="Eye">
                 <div class="image-mask"></div>
             </div>
             <div class="banner-text">
                 <div class="container banner-text-container">
-                    <h1>BRING YOUR <br> VISION TO LIFE.</h1>
-                    <p>Our team of disruptive and creative individuals will come  up with the best solutions for your brand. 
-                        <strong>Working with us will prove to be useful as it will help attract new prospects</strong>
-                    </p>
-                    <button>Get Started</button>
+                    <h1>WE ARE BUMBA</h1>
                 </div>
             </div>
         </section>  
-        <section class="projects">
+        <section class="branding">
             <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%">
-            <div class="projects-container container">
-                <div class="left">
-                    <h2>OUR <br> PROJECTS</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <button>See More</button>
+            <div class="services-container container">
+                <div class="row">
+                    <div class="column">
+                        <h1>1</h1>
+                        <p>Management consulting</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>elit ac lectus aliquam duis. Pellentesque</li>
+                            <li>augue ultricies et enim placerat.</li>
+                            <li>Accumsan tell</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h1>2</h1>
+                        <p>Positioning & brand Analytics</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>elit ac lectus aliquam duis. Pellentesque</li>
+                            <li>augue ultricies et enim placerat.</li>
+                            <li>Accumsan tell</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="right">
-                    <img src="css/img/Ice cream smoke.png" alt="Smoke ice scream">
+                <div class="row">
+                    <div class="column">
+                        <h1>3</h1>
+                        <p>Verbal identity</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>elit ac lectus aliquam duis. Pellentesque</li>
+                            <li>augue ultricies et enim placerat.</li>
+                            <li>Accumsan tell</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h1>4</h1>
+                        <p>Visual identity</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>elit ac lectus aliquam duis. Pellentesque</li>
+                            <li>augue ultricies et enim placerat.</li>
+                            <li>Accumsan tell</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column">
+                        <h1>5</h1>
+                        <p>Retail <br> branding</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>elit ac lectus aliquam duis. Pellentesque</li>
+                            <li>augue ultricies et enim placerat.</li>
+                            <li>Accumsan tell</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h1>6</h1>
+                        <p>Consulting <br> branding</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>elit ac lectus aliquam duis. Pellentesque</li>
+                            <li>augue ultricies et enim placerat.</li>
+                            <li>Accumsan tell</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <img src="css/img/Bottom Pattern.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
         </section>   
-        <section class="about">
-            <div class="about-container container">
-                <div class="left">
-                    <img src="css/img/Rectangle 13.png" alt="Smoke ice scream">
-                </div>
-                <div class="right">
-                    <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Augue lacus faucibus dolor nulla at a. Pellentesque sapien porta sed aliquam erat quis ullamcorper. Adipiscing hendrerit ultrices pharetra sed nibh gravida. Platea sapien malesuada vitae viverra quis ultrices neque dignissim.
-                        Morbi odio pharetra pellentesque risus sed. Imperdiet et venenatis dolor pharetra non. Vel tellus id amet eget convallis vestibulum imperdiet.</p>
-                    <button>See More</button>
-                </div>
-            </div>
-            <img src="css/img/Mask group.png" alt="Bumba Partterns" width="100%" style="margin: 40px 0px 0px;">
-        </section>    
-        <section class="team">
-            <div class="team-container container">
-                <div class="team-head">
-                    <h1>Our Team</h1>
-                </div>
-                <div class="team-members">
-                    <div class="member">
-                        <img src="css/img/Member One.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Executive Creative Director</p>
-                        </div>
-                    </div>
-                    <div class="member">
-                        <img src="css/img/Member Two.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Head of Strategy & Operations</p>
-                        </div>
-                    </div>
-                    <div class="member">
-                        <img src="css/img/Member Three.png" alt="">
-                        <div class="member-info">
-                            <h4>Lorem Ipsum</h4>
-                            <p>Senior Client Success Director</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="meet">
-                    <button>Meet Team</button>
-                </div>
-            </div>
-        </section>
     </main>
     <footer>
         <div class="container footer-container">
@@ -311,7 +317,6 @@
             </div>
         </div>
     </footer>
-
     <script src="js/script.js"></script>
 </body>
 </html>
